<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WikiLocale</string>
    <string name="action_settings">Settings</string>
    <string name="title">WikiLocale</string>
    <string name="open_current">Open Current Locale</string>
    <string name="test_travel">Test Travel</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="loc_title">Use GPS</string>
    <string name="loc_summary">GPS is a finer location method but uses more battery life</string>
	<string name="settings_shortcut">s</string>
	
</resources>
