<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center">    

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" 
        android:textSize="24.5sp"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:layout_marginBottom="25dip" />
    <Button
        android:id="@+id/open_current_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_current" />
    <Button
        android:id="@+id/test_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_travel" />
    <Button
        android:id="@+id/settings_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />
    <Button
        android:id="@+id/exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

</LinearLayout>
